add swagger group and instance list function
