# docs/swagger/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Warp application lifecycle manager.",
+        "description": "cluster lifecycle manager",
         "title": "Walm",
         "contact": {
             "name": "bing.han",
@@ -25,6 +25,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "instance"
                 ],
                 "parameters": [
                     {
@@ -91,6 +94,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "instance"
+                ],
                 "parameters": [
                     {
                         "type": "string",
@@ -150,6 +156,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "instance"
                 ],
                 "parameters": [
                     {
@@ -214,6 +223,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "instance"
                 ],
                 "parameters": [
                     {
@@ -296,6 +308,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "instance"
                 ],
                 "parameters": [
                     {
@@ -401,6 +416,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "instance"
+                ],
                 "parameters": [
                     {
                         "type": "string",
@@ -450,6 +468,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Cluster"
                 ],
                 "parameters": [
                     {
@@ -505,6 +526,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Cluster"
                 ],
                 "parameters": [
                     {
@@ -570,6 +594,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Cluster"
                 ],
                 "parameters": [
                     {
