# router/api/v1/cluster/interface.go
@@ -1,20 +1,22 @@
 package cluster
 
 import (
+	"fmt"
 	"net/http"
 	"strings"
+	"time"
 
 	"github.com/gin-gonic/gin"
 	"github.com/gosuri/uitable"
 
 	"walm/models"
-	helm "walm/pkg/helm"
 	. "walm/pkg/util/log"
 	"walm/router/api/v1/instance"
 	"walm/router/ex"
 )
 
 // DeployCluster godoc
+// @Tags Cluster
 // @Description Deplou an Cluster
 // @OperationId DeployCluster
 // @Accept  json
@@ -26,7 +28,7 @@ import (
 // @Failure 400 {object} ex.ApiResponse "Invalid Name supplied!"
 // @Failure 404 {object} ex.ApiResponse "namespace not found"
 // @Failure 500 {object} ex.ApiResponse "Server Error"
-// @Router /{namespace}/{name} [post]
+// @Router /cluster/{namespace}/{name} [post]
 func DeployCluster(c *gin.Context) {
 
 	name := c.Param("name")
@@ -41,12 +43,33 @@ func DeployCluster(c *gin.Context) {
 	}
 
 	var postdata Cluster
-	if err := c.Bind(&postdata); err != nil {
+	if err := c.BindJSON(&postdata); err != nil {
 		c.JSON(ex.ReturnBadRequest())
 		return
 	} else {
-		if len(postdata.Apps) > 0 {
 
+		cluster := &models.Cluster{
+			Name:       name,
+			Namespace:  namespace,
+			ConfigTemp: postdata.Conf,
+		}
+
+		if err := models.InsertCluster(cluster); err != nil {
+			c.JSON(ex.ReturnInternalServerError(err))
+			return
+		}
+
+		if len(postdata.Apps) > 0 {
+			if err, apps := getGragh(name, namespace, &postdata); err != nil {
+				c.JSON(ex.ReturnInternalServerError(err))
+				return
+			} else {
+				for _, app := range apps {
+					if err := deployInstance(cluster, app); err != nil {
+						c.JSON(ex.ReturnInternalServerError(err))
+					}
+				}
+			}
 		} else {
 			c.JSON(ex.ReturnBadRequest())
 			return
@@ -55,7 +78,65 @@ func DeployCluster(c *gin.Context) {
 
 }
 
+func deployInstance(cluster *models.Cluster, app instance.Application) error {
+	var args []string
+	var flags []string
+
+	if len(app.Name) > 0 {
+		args = append(args, app.Name)
+		args = append(args, app.Chart)
+	} else {
+		app.Name = fmt.Sprintf("%s-%s-%d", app.Chart, cluster.Name, cluster.ClusterId)
+	}
+	if len(app.Namespace) > 0 {
+		flags = append(flags, "--namespace")
+		flags = append(flags, app.Namespace)
+	}
+	if len(app.Repo) > 0 {
+		flags = append(flags, "--repo")
+		flags = append(flags, app.Repo)
+	}
+	if len(app.Version) > 0 {
+		flags = append(flags, "--version")
+		flags = append(flags, app.Version)
+	}
+
+	if len(app.Links) > 0 {
+		for _, v := range app.Links {
+			flags = append(flags, "--link")
+			flags = append(flags, v)
+		}
+	}
+
+	appInst := models.AppInst{
+		Name:        app.Name,
+		Namespace:   app.Namespace,
+		AppPkg:      app.Chart,
+		Vers:        app.Version,
+		ConfigTemp:  app.Value,
+		Status:      "deployed",
+		ClusterId:   cluster.ClusterId,
+		InstallTime: time.Now().Unix(),
+	}
+
+	if err := instance.WalmInst.DeplyApplications(args, flags); err != nil {
+		return err
+	}
+
+	ti := time.Now().Unix()
+	appInst.InstalledTime, appInst.LastTime = ti, ti
+
+	if err := models.InsertAppInst(appInst); err != nil {
+		Log.Errorf("occu error when insert into AppInst: %s \n", err)
+
+		return err
+	}
+
+	return nil
+}
+
 // StatusCluster godoc
+// @Tags Cluster
 // @Description Get states of an Cluster
 // @OperationId StatusCluster
 // @Accept  json
@@ -66,7 +147,7 @@ func DeployCluster(c *gin.Context) {
 // @Failure 400 {object} ex.ApiResponse "Invalid Name supplied!"
 // @Failure 404 {object} ex.ApiResponse "cluster not found"
 // @Failure 500 {object} ex.ApiResponse "Server Error"
-// @Router /{namespace}/{name} [get]
+// @Router /cluster/{namespace}/{name} [get]
 func StatusCluster(c *gin.Context) {
 	//ListApplications
 	name := c.Param("name")
@@ -93,7 +174,7 @@ func StatusCluster(c *gin.Context) {
 		var errs []error
 
 		for _, release := range releases {
-			if table, err := helm.Helm.ListApplications([]string{release}, []string{"--namespace", namespace, "--all"}); err != nil {
+			if table, err := instance.WalmInst.ListApplications([]string{release}, []string{"--namespace", namespace, "--all"}); err != nil {
 				errs = append(errs, err)
 			} else {
 				for _, line := range strings.Split(table.String(), "/n") {
@@ -118,6 +199,7 @@ func StatusCluster(c *gin.Context) {
 }
 
 // DeleteCluster godoc
+// @Tags Cluster
 // @Description Delete an Cluster
 // @OperationId DeleteCluster
 // @Accept  json
@@ -128,7 +210,7 @@ func StatusCluster(c *gin.Context) {
 // @Failure 400 {object} ex.ApiResponse "Invalid Name supplied!"
 // @Failure 404 {object} ex.ApiResponse "cluster not found"
 // @Failure 500 {object} ex.ApiResponse "Server Error"
-// @Router /{namespace}/{name} [delete]
+// @Router /cluster/{namespace}/{name} [delete]
 func DeleteCluster(c *gin.Context) {
 	name := c.Param("name")
 	if len(name) == 0 {
@@ -147,7 +229,7 @@ func DeleteCluster(c *gin.Context) {
 		Log.Infof("begin to delete cluser %s; namespace %s; releaes: %s", name, namespace, strings.Join(releases, ","))
 		var errs []error
 		for _, release := range releases {
-			if err := helm.Helm.Detele([]string{release}, []string{}); err != nil {
+			if err := instance.WalmInst.Detele([]string{release}, []string{}); err != nil {
 				errs = append(errs, err)
 			} else {
 				if err := models.DeleteAppInst(release); err != nil {
@@ -169,7 +251,3 @@ func DeleteCluster(c *gin.Context) {
 	c.JSON(ex.ReturnOK())
 
 }
-
-
-
-
